--- a/README.org
+++ b/README.org
@@ -5,7 +5,7 @@
 * Hacker Rank Problems - Remote Pair Programming
 ** Problem 01
 + [[https://www.hackerrank.com/challenges/find-digits/problem][Link to Hacker Rank Problem]]
- Complete the 'findDigits' function below.
++ Complete the 'findDigits' function below.
  The function is expected to return an INTEGER.
  The function accepts INTEGER n as parameter.
 + Solution:
